C++-annotations (9.4.0)

  * Added new section make_shared in the stl chapter.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 28 Jun 2012 20:48:47 +0200

C++-annotations (9.3.0)

  * Coverage of the static_cast and reinterpret_cast was refined, following a
    suggestion provided by Gido Schoenmacker.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 06 Mar 2012 20:34:11 +0100

C++-annotations (9.2.1)

  * Starting this release all release tags (using names that are identical to
    the version number, so for this release the tag is 9.2.1) are signed to
    allow authentication.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 27 Feb 2012 13:42:38 +0100

9.2.0

  * Converted scanner generations from flex to flexc++

  * Rewrote the Concrete chapter's section about polymorphic semantic values

  * Rewrote the Containers chapter's section about unrestricted unions

  * Removed the Concrete chapter's section about unrestricted union semantic
    values 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 26 Feb 2012 17:10:55 +0100

9.1.0

  * Added sections about features of C++11 now implemented in g++-4.7

  * Added a script to create a beautiful  C++ bound book

  * Repaired typos and stuff

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 20 Jan 2012 11:50:01 +0100

9.0.2

  * Removed excessive use of the verb 'will' from the Annotations. 

  * The required operators for each of the standard interators (input,
    output, forward, bidirectional, random_access) are now explicitly
    mentioned in the paragraphs covering them.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 12 Sep 2011 16:01:07 +0200

9.0.1

  * Repaired some new annoying typos and slightly rephrased some paragraphs of
    the `Koenig lookup' section.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 20 Jul 2011 12:21:33 +0200

9.0.0

  * The form of move special members (move constructors, move assignment
    operators, other functions defining rvalue type parameters) was