@@ -62,11 +62,11 @@ All abstract containers described in this chapter as well as the tt(string)
 and stream datatypes (cf. chapters ref(String) and ref(IOStreams)) are part of
 the Standard Template Library.
 
-All but the unordered containers containers, support
+All but the unordered containers support
         hi(basic operators of containers)
         hi(containers: basic operators)
         hi(operators: of containers)
-    the following basic set of basic operators:
+    the following basic set of operators:
     itemization(
     it() The i(overloaded assignment) operator, so we can assign two
 containers of the same types to each other. This basic operator em(is)
