@@ -46,7 +46,7 @@ definitions:
     it() The traditional, bf(C) style definition of a type, embedding the type
         name in the definition (turning a variable name into a type name):
         verb(
-    typedef typedef unsigned long long int FUN(double, int);
+    typedef unsigned long long int FUN(double, int);
         )
     it() Apply tt(using) to improve the visibility (for humans) of the type
         name, by moving the type  name to the front of the definition:
