@@ -145,7 +145,7 @@ called from the move-aware binary operator having prototype
     The traditional binary operator's implementation now simply consists of
 two steps:
         itemization(
-        it() A copy of the left-hand side operand is made usign the class's
+        it() A copy of the left-hand side operand is made using the class's
 copy constructor;
         it() The move-aware binary operator is called, passing it the
 anonymized copy as its left-hand side operand and returning its result as the
