@@ -1,2 +1,2 @@
-SUBST(DOCVERSION)(9.4.0)
+SUBST(DOCVERSION)(9.4.1)
 SUBST(YEARS)(1994 - 2012)
