@@ -1,3 +1,12 @@
+C++-annotations (9.4.1)
+
+  * Repaired typos, added missing 'at' member to vector, reformulated the
+    section about nested namespaces (Meir Shani).
+
+
+
+
+
 C++-annotations (9.4.0)
 
   * Added new section make_shared in the stl chapter.
